# two-face

./: .gitignore  Cargo.toml  EGUI_IMPLEMENTATION_PLAN.md  LAYOUT_SYSTEM_DOCUMENTATION.md  MENU_INPUT_TESTING_CHECKLIST.md  MILESTONE_6_COMPLETE.md  PROGRESS.md  README.md  TTS.md  VELLUMFE_COMPARISON.md  add_browser_traits.sh
.claude/: settings.local.json
.claude/skills/moai-project-template-optimizer/: SKILL.md
.moai-backups/backup/.claude/: claude.md  settings.local.json
.moai/reports/: sync-report-SPEC-TF-ANALYSIS-001.md
.moai/specs/SPEC-TF-ANALYSIS-001/: feature_parity.md  plan.md  recommendations.md  spec.md
.moai/specs/SPEC-TF-PARITY-RESIZE-001/: acceptance.md  plan.md  spec.md
defaults/: cmdlist1.xml  colors.toml  config.toml  highlights.toml  keybinds.toml  map_coordinates.json
defaults/layouts/: layout.toml  none.toml  sidebar.toml
defaults/sounds/: README.md
docs/: NEW_THEMES.md  RESIZE_ALGORITHM.md  THEME_ANALYSIS.md  THEME_ARCHITECTURE.md  THEME_FIELD_REFERENCE.md  TTS_DESIGN.md
docs/wiki/: README.md  advanced_features.md  cmdlists_and_automation.md  configuration.md  contributors.md  customization.md  frontends.md  getting_connected.md  input_and_menus.md  installation.md  project_overview.md  troubleshooting.md  widgets.md
src/: app.rs  clipboard.rs  cmdlist.rs  config.rs  config.rs.bak  main.rs  main.rs.bak  map_data.rs  network.rs  parser.rs  performance.rs  selection.rs  sound.rs  theme.rs  validator.rs  widget_state.rs
src/config/: menu_keybind_validator.rs
src/core/: app_core.rs  app_core.rs.bak  app_core.rs.pre-dotcommands  event_bridge.rs  input_result.rs  input_router.rs  menu_actions.rs  messages.rs  mod.rs  state.rs
src/data/: mod.rs  ui_state.rs  ui_state.rs.backup  widget.rs  window.rs
src/frontend/: events.rs  mod.rs
src/frontend/gui/: mod.rs
src/frontend/tui/: active_effects.rs  app.rs  color_form.rs  color_picker.rs  (+34 more)
src/tts/: mod.rs
src/ui/: active_effects.rs  color_form.rs  color_palette_browser.rs  color_picker.rs  command_input.rs  compass.rs  countdown.rs  dashboard.rs  hand.rs  hands.rs  highlight_browser.rs  highlight_form.rs  indicator.rs  injury_doll.rs  inventory_window.rs  keybind_browser.rs  keybind_form.rs  map_widget.rs  mod.rs  performance_stats.rs  players.rs  popup_menu.rs  progress_bar.rs  room_window.rs  scrollable_container.rs  settings_editor.rs  spacer.rs  spell_color_browser.rs  spell_color_form.rs  spells_window.rs  tabbed_text_window.rs  targets.rs  text_window.rs  uicolors_browser.rs  window_editor.rs  window_manager.rs
src/widgets/: countdown.rs  mod.rs  progress_bar.rs  text_window.rs
(+4 files in other folders)
