[package]
name = "two-face"
version = "0.1.0"
edition = "2021"
authors = ["Nisugi"]
description = "Modern, high-performance multi-frontend (TUI/GUI) client for GemStone IV"

[[bin]]
name = "two-face"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }
anyhow = "1"

# Terminal UI
ratatui = "0.29"
crossterm = { git = "https://github.com/justinpopa/crossterm.git", branch = "dev", features = ["event-stream"] }
tui-textarea = "0.7"

# GUI (future)
# egui = "0.29"
# eframe = "0.29"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"

# Text processing
regex = "1"
aho-corasick = "1"  # Fast literal string matching for highlights
quick-xml = "0.36"  # XML parsing
include_dir = "0.7"  # Embed default config files
rpassword = "7"
openssl = "0.10"
vcpkg = "0.2"

# Sound (optional)
rodio = { version = "0.19", optional = true }

# TTS - Text-to-speech (always included)
tts = "0.26"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Time handling
chrono = "0.4"

# Clipboard
arboard = "3"
base64 = "0.22.1"

[features]
default = ["sound"]
sound = ["dep:rodio"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
